--- a/src/App.css
+++ b/src/App.css
@@ -1,99 +1,171 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0 auto;
-  max-width: 500px;
-  min-width: 250px;
+  margin: 20px auto;
+  padding: 0px 20px;
+  width: 500px;
+  height: 500px !important;
 }
 
-/* Remove margins and padding from the list */
 ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-/* Style the list items */
-ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  list-style-type: none;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-  
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+/* Style form-header */
+.form-header {
+    background-color: #B00020;
+    padding: 5px 5px;
+    margin:20px 0;
+    color: white;
+    text-align: center;
 }
 
-/* Set all odd list items to a different color (zebra-stripes) */
-
-/* Darker background-color on hover */
-ul li:hover {
-  background: #ddd;
+.form-header:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-/* When clicked on, add a background color and strike out text */
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
+/* Style the input */
+.react-datepicker-wrapper {
+  float: left;
+  width: 25%;
+  overflow: hidden; 
+}
+.react-datepicker__input-container input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+    outline: none;
 }
 
-/* Add a "checked" mark when clicked on */
-ul li.checked::before {
-  content: '';
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
+.form-input__text {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    border-left: 1px solid #eee;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+    outline: none;
 }
+
+/* Style the "Add" button */
+.form-btn {
+    padding: 10px;
+    width: 100%;
+    background: #000000;
+    color: #FFFFFF;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border: none;
+    border-radius: 0;
+    outline: none;
+}
+
+
+
+
+
+
+.todo-item:first-child {
+  border-top: 1px solid #666;
+}
+
+.todo-item {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 8px;
+    background: #eee;
+    font-size: 18px;
+    transition: 0.2s;
+    list-style: none;
+    border-bottom: 1px solid #666;
+
+    /* make the list items unselectable */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Style the notification icon */
+.todo-item__date {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 12px;
+    padding: 17px 90px 15px 12px;
+}
+
+/* Style the notification icon */
+.todo-item__notification {
+    position: absolute;
+    right: 50px;
+    top: 12px;
+    width: 24px;
+    height: 24px;
+}
+
 
 /* Style the close button */
 .close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
 }
 
 .close:hover {
-  background-color: #474747;
-  color: #fff;
+    background-color: #f44336;
+    color: white;
 }
 
-.close_done {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-  background-color: #ff1a1a;
+
+
+
+
+
+/* image checkbox buttons */
+.img-checkbox {
+  width: 24px;
+  height: 24px;
+  opacity: 0.3;
+  padding: 10px 15px 10px 15px;
+}
+:checked+.img-checkbox {
+    opacity: 1;
 }
 
-.close_done:hover {
-  background-color: #e60000;
-  color: #fff;
+/* Extra assumed classes */
+.checkbox > label > input[type=checkbox]
+{
+  display:none;
+}
+.checkbox-inline, .checkbox
+{
+  float: right;
+  display: inline-block;
 }
 
-#input {
-  margin-bottom: 20px;
-  padding-top: 10px;
-  width: 500px;
-  height: 60px;
-  font-size: 40px;
-  border: 0;
-  text-align: center;
+
+.todo-item__notifications {
+  float: right;
+  width: 24px;
+  height: 24px;
+  padding-right: 40px;
 }
 
-#input:focus {
-  outline:none;
-}
 
 .done {
   text-decoration: line-through;
